--- a/.github/workflows/crypto_scanner.yml
+++ b/.github/workflows/crypto_scanner.yml
@@ -24,10 +24,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run crypto_4af_4
-        run: |
-          echo "==== $(date -u '+%Y-%m-%d %H:%M:%S UTC') | crypto_4af_4 ===="
-          python crypto_4af_4.py
+      #- name: Run crypto_4af_4
+        #run: |
+          #echo "==== $(date -u '+%Y-%m-%d %H:%M:%S UTC') | crypto_4af_4 ===="
+          #python crypto_4af_4.py
 
       - name: Run crypto_4af_5
         run: |
