Fix secrets injection and run only crypto_4af_5.py

--- a/.github/workflows/crypto_scanner.yml
+++ b/.github/workflows/crypto_scanner.yml
@@ -2,14 +2,13 @@ name: Crypto Scanner (Twice Daily)
 
 on:
   schedule:
-    - cron: "0 1 * * *"    # 1:00 AM UTC
-    - cron: "0 13 * * *"   # 1:00 PM UTC
-  workflow_dispatch:
+    - cron: '0 1 * * *'   # 1:00 AM UTC
+    - cron: '0 13 * * *'  # 1:00 PM UTC
+  workflow_dispatch:      # Allows manual runs
 
 jobs:
-  run-scanners:
+  run-scanner:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -17,19 +16,28 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install ccxt pandas pandas_ta_classic requests tabulate
 
-      #- name: Run crypto_4af_4
-        #run: |
-          #echo "==== $(date -u '+%Y-%m-%d %H:%M:%S UTC') | crypto_4af_4 ===="
-          #python crypto_4af_4.py
+      # Old script (disabled as requested)
+      # - name: Run crypto_4af_4 (disabled)
+      #   env:
+      #     SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+      #     SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
+      #     RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
+      #   run: |
+      #     echo "==== $(date -u '+%Y-%m-%d %H:%M:%S UTC') | crypto_4af_4 ===="
+      #     python crypto_4af_4.py
 
-      - name: Run crypto_4af_5
+      - name: Run crypto_4af_5 (Bybit full-market)
+        env:
+          SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+          SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
+          RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
         run: |
           echo "==== $(date -u '+%Y-%m-%d %H:%M:%S UTC') | crypto_4af_5 ===="
           python crypto_4af_5.py
